Add deployment in README